# dev-team

./: .gitignore  ARCHITECTURE_CREW_COMPLETE.md  AUTOMATION_COMPLETE.md  CLAUDE_VS_QWEN3_COMPARISON.md  MULTI_RUN_GUIDE.md  MULTI_RUN_PATTERN.md  QUICK_START.md  README.md  SHARED_FOLDERS_COMPLETE.md  SHARED_FOLDERS_PROPOSAL.md  STRATEGY_CREW_COMPLETE.md  STRATEGY_CREW_MIGRATION.md  merge_results.py  orchestrator_competitor_simple.py  orchestrator_multi_run.py  pyproject.toml  run_full_analysis.py
architecture_crew/: .gitignore  README.md  pyproject.toml  quick_test.py  setup_symlinks.sh  test_tools.py
architecture_crew/src/architecture_crew/: crew.py  main.py
architecture_crew/src/architecture_crew/config/: agents.yaml  tasks.yaml
architecture_crew/src/architecture_crew/tools/: custom_tool.py
docs/: ALL_RUNS_COMPARISON.md  ARCHITECTURE_CREW_FIXES_COMPLETE.md  ARCHITECTURE_SPECIFICATION_WORKFLOW.md  ARCHITECTURE_TEMPLATE.md  CLAUDE_REPORT.md  COMPETITOR_ANALYST_IMPROVEMENTS.md  COMPETITOR_PLUGIN_SETUP.md  COMPLETE_SUMMARY.md  CREW2_DISABLED.md  CREW_PY_UPDATE.md  DEEPSEEK_VS_CLAUDE_COMPARISON.md  IMPROVED_CONFIG_FORCED_DELIBERATION.md  IMPROVEMENTS_RUN3.md  LLM_ANALYSIS_COMPARISON.md  MARKET_RESEARCHER_ADDED.md  MULTI_RUN_ANALYSIS.md  NICHE_AND_LOCALIZATION_ENHANCED.md  OLLAMA_MODEL_CONFIGURATION.md  PLATFORM_AGNOSTIC_ANALYSIS.md  QWEN25_VS_CLAUDE_COMPARISON.md  QWEN3_INSTRUCT_VS_CLAUDE_FINAL.md  README.md  RUN4_VS_CLAUDE_COMPARISON.md  SCOPE_CONFUSION_FIX.md  SETUP_COMPLETE.md  SKELETON_PLUGIN_SETUP.md  SUMMARY_MULTI_RUN.md  SYMLINK_AND_ARCHITECTURE_APPROACH.md  (+3 more)
(+39 files in other folders)
