[project]
name = "dev_team"
version = "0.1.0"
description = "dev-team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
dev_team = "dev_team.main:run"
run_crew = "dev_team.main:run"
train = "dev_team.main:train"
replay = "dev_team.main:replay"
test = "dev_team.main:test"
full_analysis = "run_full_analysis:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
