[project]
name = "architecture_crew"
version = "0.1.0"
description = "architecture-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
architecture_crew = "architecture_crew.main:run"
run_crew = "architecture_crew.main:run"
train = "architecture_crew.main:train"
replay = "architecture_crew.main:replay"
test = "architecture_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
